Start and Stop buttons are working. Streaming just does not resume well after pushing start after a stop

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -5,3 +5,12 @@
     margin-top: 20px;
     border: 1px solid black;
 }
+
+#streaming {
+    border: 10px solid black;
+}
+
+
+.row {
+    height: 100%;
+}
