better way to serve static files + updated picture download

--- a/templates/index.html
+++ b/templates/index.html
@@ -6,9 +6,9 @@
 
     <title>IronCar Dashboard</title>
     <!-- Bootstrap core CSS -->
-    <link href="css/bootstrap.min.css" rel="stylesheet">
-    <link href="css/open-iconic-bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="css/styles.css">
+    <link href="static/css/bootstrap.min.css" rel="stylesheet">
+    <link href="static/css/open-iconic-bootstrap.min.css" rel="stylesheet">
+    <link href="static/css/styles.css" rel="stylesheet" >
   </head>
 
   <body id="kinput">
@@ -68,7 +68,7 @@
 				    </marker>
 				</defs>
 
-				<image id="stream_image" xlink:href="img/img_stream.jpg" x="0" y="0" height="150px" width="250px"/>
+				<image id="stream_image" xlink:href="/picture" x="0" y="0" height="150px" width="250px"/>
      			<line id="dirline" x1="125" y1="110" x2="25" y2="110" stroke="#f00" stroke-width="5" marker-end="url(#arrow)" visibility="hidden"/>
 			</svg>
 			</img>
@@ -83,11 +83,11 @@
     </div>
 
 
-    <script src="js/jquery-3.3.1.min.js"></script>
-    <script src="js/socket.io.slim.js"></script>
-    <script src="js/bootstrap.min.js"></script>
-    <script src="js/main.js"></script>
-    <script src="js/my_stream.js"></script>
+    <script src="static/js/jquery-3.3.1.min.js"></script>
+    <script src="static/js/socket.io.slim.js"></script>
+    <script src="static/js/bootstrap.min.js"></script>
+    <script src="static/js/main.js"></script>
+    <script src="static/js/my_stream.js"></script>
 
   </body>
 </html>
