--- a/templates/index.html
+++ b/templates/index.html
@@ -1,93 +1,66 @@
-<!doctype html>
-<html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+{% extends "layout.html" %}
+{% block body %}
+<div class="px-3 py-3 pt-md-2 pb-md-4 mx-auto text-center">
+  <div class="alert alert-warning" role="alert" id="Status">
+  </div>
+</div>
 
-    <title>IronCar Dashboard</title>
-    <!-- Bootstrap core CSS -->
-    <link href="static/css/bootstrap.min.css" rel="stylesheet">
-    <link href="static/css/open-iconic-bootstrap.min.css" rel="stylesheet">
-    <link href="static/css/styles.css" rel="stylesheet" >
-  </head>
-
-  <body id="kinput">
-
-    <div class="d-flex flex-column flex-md-row align-items-center p-3 px-md-4 mb-3 bg-white border-bottom box-shadow">
-      <h5 class="my-0 mr-md-auto font-weight-normal">IronCar Dashboard 🏎️</h5>
-      <nav class="my-2 my-md-0 mr-md-3">
-        <a class="p-2 text-dark" href="/">Main</a>
-      </nav>
+<div class="container">
+  <div class="row">
+    <div class="col-lg-6 mb-3">
+      <form>
+        <div class="form-row">
+          <div class="form-group col-md-12">
+            <label for="inputEmail4">Car Mode</label><br/>
+            <div class="btn-group mr-2" role="group" aria-label="First group">
+	            <button type="submit" class="btn btn-outline-primary" data-mode="training">Training 🏋️</button>
+	            <button type="submit" class="btn btn-outline-primary" data-mode="auto">Autopilot 🧠</button>
+	            <button type="submit" class="btn btn-outline-primary" data-mode="dirauto">Direction auto 💡</button>
+	            <button type="submit" class="btn btn-outline-primary" data-mode="rest">Rest 💤</button>
+	        	</div>
+          </div>
+        </div>
+        <div class="form-group" id="model-group">
+          <label for="inputAddress">Model </label>
+          <select class="form-control" id="model_select">
+              <option selected>Choose model...</option>
+              {% for model in models %}
+              <option value=''>{{model}}</option>
+              {% endfor %}
+          </select>
+        </div>
+        <div class="form-group" id="control-group">
+          <label>Control </label>
+          <p><span id="control" class="oi oi-media-pause"></span></p>
+        </div>
+        <div class="form-group">
+          <label for="inputAddress2" id="maxSpeed">Max speed limit: 50%</label><br/>
+          <input type="range" id="maxSpeedSlider" oninput="maxSpeedUdate();">
+        </div>
+        <button id="starter" class="btn btn-success btn-lg btn-block" disabled>Start</button>
+      </form>
     </div>
 
+    <div class="col-lg-6 text-center mb-3">
 
-    <div class="px-3 py-3 pt-md-2 pb-md-4 mx-auto text-center">
-      <div class="alert alert-warning" role="alert" id="Status">
-      </div>
+		<svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" id="stream" viewBox="0 0 250 150">
+			<defs>
+			    <marker id="arrow" markerWidth="10" markerHeight="10" refX="0" refY="3" orient="auto" markerUnits="strokeWidth">
+			      <path d="M0,0 L0,6 L3,3 z" fill="#f00" />
+			    </marker>
+			</defs>
+
+			<image id="stream_image" xlink:href="/picture" x="0" y="0" height="150px" width="250px"/>
+ 			<line id="dirline" x1="125" y1="110" x2="25" y2="110" stroke="#f00" stroke-width="5" marker-end="url(#arrow)" visibility="hidden"/>
+		</svg>
+		</img>
+
+		<div class="btn-group mt-1" role="group" aria-label="Basic example">
+			<button id="camera" class="btn btn-info">Start camera</button>
+			<button id="take-picture" type="button" class="btn btn-light">📸</button>
+		</div>
+
     </div>
-
-    <div class="container">
-	  <div class="row">
-	    <div class="col-lg-6 mb-3">
-	      <form>
-	        <div class="form-row">
-	          <div class="form-group col-md-12">
-	            <label for="inputEmail4">Car Mode</label><br/>
-	            <div class="btn-group mr-2" role="group" aria-label="First group">
-		            <button type="submit" class="btn btn-outline-primary" data-mode="training">Training 🏋️</button>
-		            <button type="submit" class="btn btn-outline-primary" data-mode="auto">Autopilot 🧠</button>
-		            <button type="submit" class="btn btn-outline-primary" data-mode="dirauto">Direction auto 💡</button>
-		            <button type="submit" class="btn btn-outline-primary" data-mode="rest">Rest 💤</button>
-		        	</div>
-	          </div>
-	        </div>
-	        <div class="form-group" id="model-group">
-	          <label for="inputAddress">Model </label>
-	          <select class="form-control" id="model_select">
-	              <option selected>Choose model...</option>
-	          </select>
-	        </div>
-	        <div class="form-group" id="control-group">
-	          <label>Control </label>
-	          <p><span id="control" class="oi oi-media-pause"></span></p>
-	        </div>
-	        <div class="form-group">
-	          <label for="inputAddress2" id="maxSpeed">Max speed limit: 50%</label><br/>
-	          <input type="range" id="maxSpeedSlider" oninput="maxSpeedUdate();">
-	        </div>
-	        <button id="starter" class="btn btn-success btn-lg btn-block" disabled>Start</button>
-	      </form>
-	    </div>
-
-	    <div class="col-lg-6 text-center mb-3">
-
-			<svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" id="stream" viewBox="0 0 250 150">
-				<defs>
-				    <marker id="arrow" markerWidth="10" markerHeight="10" refX="0" refY="3" orient="auto" markerUnits="strokeWidth">
-				      <path d="M0,0 L0,6 L3,3 z" fill="#f00" />
-				    </marker>
-				</defs>
-
-				<image id="stream_image" xlink:href="/picture" x="0" y="0" height="150px" width="250px"/>
-     			<line id="dirline" x1="125" y1="110" x2="25" y2="110" stroke="#f00" stroke-width="5" marker-end="url(#arrow)" visibility="hidden"/>
-			</svg>
-			</img>
-
-			<div class="btn-group mt-1" role="group" aria-label="Basic example">
-				<button id="camera" class="btn btn-info">Start camera</button>
-				<button id="take-picture" type="button" class="btn btn-light">📸</button>
-			</div>
-
-	    </div>
-	  </div>
-    </div>
-
-
-    <script src="static/js/jquery-3.3.1.min.js"></script>
-    <script src="static/js/socket.io.slim.js"></script>
-    <script src="static/js/bootstrap.min.js"></script>
-    <script src="static/js/main.js"></script>
-    <script src="static/js/my_stream.js"></script>
-
-  </body>
-</html>
+  </div>
+</div>
+{% endblock %}
