--- a/front/templates/layout.html
+++ b/front/templates/layout.html
@@ -6,9 +6,9 @@
 
     <title>IronCar Dashboard</title>
     <!-- Bootstrap core CSS -->
-    <link href="static/css/bootstrap.min.css" rel="stylesheet">
-    <link href="static/css/open-iconic-bootstrap.min.css" rel="stylesheet">
-    <link href="static/css/styles.css" rel="stylesheet" >
+    <link href="{{ url_for('static', filename='css/bootstrap.min.css') }}" rel="stylesheet">
+    <link href="{{ url_for('static', filename='css/open-iconic-bootstrap.min.css') }}" rel="stylesheet">
+    <link href="{{ url_for('static', filename='css/styles.css') }}" rel="stylesheet" >
   </head>
 
   <body id="kinput">
@@ -24,11 +24,11 @@
     {% block body %}{% endblock %}
 
 
-    <script src="static/js/jquery-3.3.1.min.js"></script>
-    <script src="static/js/socket.io.slim.js"></script>
-    <script src="static/js/bootstrap.min.js"></script>
-    <script src="static/js/main.js"></script>
-    <script src="static/js/my_stream.js"></script>
+    <script src="{{ url_for('static', filename='js/jquery-3.3.1.min.js') }}"></script>
+    <script src="{{ url_for('static', filename='js/socket.io.slim.js') }}"></script>
+    <script src="{{ url_for('static', filename='js/bootstrap.min.js') }}"></script>
+    <script src="{{ url_for('static', filename='js/main.js') }}"></script>
+    <script src="{{ url_for('static', filename='js/my_stream.js') }}"></script>
 
   </body>
 </html>
