--- a/front/templates/layout.html
+++ b/front/templates/layout.html
@@ -17,6 +17,7 @@
       <h5 class="my-0 mr-md-auto font-weight-normal">IronCar Dashboard 🏎️</h5>
       <nav class="my-2 my-md-0 mr-md-3">
         <a class="p-2 text-dark" href="/">Main</a>
+        <a class="p-2 text-dark" href="/commands">Commands</a>
       </nav>
     </div>
 
