moving my_stream to main.js - weird bug socket = io() at the end. fix it

--- a/front/templates/layout.html
+++ b/front/templates/layout.html
@@ -26,10 +26,9 @@
 
 
     <script src="{{ url_for('static', filename='js/jquery-3.3.1.min.js') }}"></script>
-    <script src="{{ url_for('static', filename='js/socket.io.slim.js') }}"></script>
+    <script src="{{ url_for('static', filename='js/socket.io.min.js') }}"></script>
     <script src="{{ url_for('static', filename='js/bootstrap.min.js') }}"></script>
     <script src="{{ url_for('static', filename='js/main.js') }}"></script>
-    <script src="{{ url_for('static', filename='js/my_stream.js') }}"></script>
 
   </body>
 </html>
