--- a/front/templates/layout.html
+++ b/front/templates/layout.html
@@ -21,7 +21,10 @@
       </nav>
     </div>
 
-
+    <div class="px-3 py-3 pt-md-2 pb-md-4 mx-auto text-center">
+      <div class="alert alert-warning" role="alert" id="status">
+      </div>
+    </div>
     {% block body %}{% endblock %}
 
 
