--- a/front/templates/layout.html
+++ b/front/templates/layout.html
@@ -18,6 +18,7 @@
       <nav class="my-2 my-md-0 mr-md-3">
         <a class="p-2 text-dark" href="/">Main</a>
         <a class="p-2 text-dark" href="/commands">Commands</a>
+        <span id="serverStatus" class="badge badge-success">Connected</span>
       </nav>
     </div>
 
