--- a/front/templates/index.html
+++ b/front/templates/index.html
@@ -38,22 +38,23 @@
 
     <div class="col-lg-6 text-center mb-3">
 
-		<svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" id="stream" viewBox="0 0 250 150">
-			<defs>
-			    <marker id="arrow" markerWidth="10" markerHeight="10" refX="0" refY="3" orient="auto" markerUnits="strokeWidth">
-			      <path d="M0,0 L0,6 L3,3 z" fill="#f00" />
-			    </marker>
-			</defs>
+  		<svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" id="stream" viewBox="0 0 250 150">
+  			<defs>
+  			    <marker id="arrow" markerWidth="10" markerHeight="10" refX="0" refY="3" orient="auto" markerUnits="strokeWidth">
+  			      <path d="M0,0 L0,6 L3,3 z" fill="#f00" />
+  			    </marker>
+  			</defs>
 
-			<image id="stream_image" xlink:href="/picture" x="0" y="0" height="150px" width="250px"/>
- 			<line id="dirline" x1="125" y1="110" x2="25" y2="110" stroke="#f00" stroke-width="5" marker-end="url(#arrow)" visibility="hidden"/>
-		</svg>
-		</img>
+  			<image id="stream_image" xlink:href="/picture" x="0" y="0" height="150px" width="250px"/>
+   			<line id="dirline" x1="125" y1="110" x2="25" y2="110" stroke="#f00" stroke-width="5" marker-end="url(#arrow)" visibility="hidden"/>
+  		</svg>
 
-		<div class="btn-group mt-1" role="group" aria-label="Basic example">
-			<button id="camera" class="btn btn-info">Start camera</button>
-			<button id="take-picture" type="button" class="btn btn-light">📸</button>
-		</div>
+      <svg class="chart"></svg>
+
+  		<div class="btn-group mt-1" role="group" aria-label="Basic example">
+  			<button id="camera" class="btn btn-info">Start camera</button>
+  			<button id="take-picture" type="button" class="btn btn-light">📸</button>
+  		</div>
 
     </div>
   </div>
