--- a/front/templates/layout.html
+++ b/front/templates/layout.html
@@ -32,6 +32,7 @@
     <script src="{{ url_for('static', filename='js/jquery-3.3.1.min.js') }}"></script>
     <script src="{{ url_for('static', filename='js/socket.io.min.js') }}"></script>
     <script src="{{ url_for('static', filename='js/bootstrap.min.js') }}"></script>
+    <script src="{{ url_for('static', filename='js/d3.v4.min.js') }}"></script>
     <script src="{{ url_for('static', filename='js/main.js') }}"></script>
 
   </body>
