--- a/front/templates/index.html
+++ b/front/templates/index.html
@@ -49,7 +49,7 @@
    			<line id="dirline" x1="125" y1="110" x2="25" y2="110" stroke="#f00" stroke-width="5" marker-end="url(#arrow)" visibility="hidden"/>
   		</svg>
 
-      <svg class="chart"></svg>
+      <!-- <svg class="chart"></svg> -->
 
   		<div class="btn-group mt-1" role="group" aria-label="Basic example">
   			<button id="camera" class="btn btn-info">Start camera</button>
