--- a/front/templates/index.html
+++ b/front/templates/index.html
@@ -6,7 +6,7 @@
       <form>
         <div class="form-row">
           <div class="form-group col-md-12">
-            <label for="inputEmail4">Car Mode</label><br/>
+            <label>Car Mode</label><br/>
             <div class="btn-group mr-2" role="group" aria-label="First group">
 	            <button type="submit" class="btn btn-outline-primary" data-mode="training">Training 🏋️</button>
 	            <button type="submit" class="btn btn-outline-primary" data-mode="auto">Autopilot 🧠</button>
@@ -28,7 +28,16 @@
           <label>Control </label>
           <p><span id="control" class="oi oi-media-pause"></span></p>
         </div>
-        <div class="form-group">
+        <div class="form-row" id="speed-group">
+          <div class="form-group col-md-12">
+            <label>Speed Mode</label><br/>
+            <div class="btn-group mr-2" role="group" aria-label="First group">
+	            <button type="submit" class="btn btn-primary" data-speed-mode="training">Constant ➡️️</button>
+	            <button type="submit" class="btn btn-outline-primary" data-speed-mode="auto">Auto 💡</button>
+	        	</div>
+          </div>
+        </div>
+        <div class="form-group" id="speed-limit">
           <label for="inputAddress2" id="maxSpeed">Max speed limit: 50%</label><br/>
           <input type="range" id="maxSpeedSlider" oninput="maxSpeedUdate();">
         </div>
