added confidence coef on speed + various fixes

--- a/front/templates/index.html
+++ b/front/templates/index.html
@@ -11,7 +11,7 @@
 	            <button type="submit" class="btn btn-outline-primary" data-mode="training">Training 🏋️</button>
 	            <button type="submit" class="btn btn-outline-primary" data-mode="auto">Autopilot 🧠</button>
 	            <button type="submit" class="btn btn-outline-primary" data-mode="dirauto">Direction auto 💡</button>
-	            <button type="submit" class="btn btn-outline-primary" data-mode="rest">Rest 💤</button>
+	            <button type="submit" class="btn btn-outline-primary" data-mode="resting">Rest 💤</button>
 	        	</div>
           </div>
         </div>
@@ -32,7 +32,7 @@
           <div class="form-group col-md-12">
             <label>Speed Mode</label><br/>
             <div class="btn-group mr-2" role="group" aria-label="First group">
-	            <button type="submit" class="btn btn-primary" data-speed-mode="training">Constant ➡️️</button>
+	            <button type="submit" class="btn btn-primary" data-speed-mode="constant">Constant ➡️️</button>
 	            <button type="submit" class="btn btn-outline-primary" data-speed-mode="auto">Auto 💡</button>
 	        	</div>
           </div>
