corrected one sentence

--- a/front/templates/help.html
+++ b/front/templates/help.html
@@ -20,7 +20,7 @@
 
         <h4>Direction auto 💡</h4>
         <p>
-            Use this mode to control automatically the steering of the car. You can use the keyboard to manipulate the acceleration of your car.
+            Use this mode to control automatically the steering of the car. You can use the keyboard to control the acceleration of your car.
         </p>
 
         <h4>Rest 💤</h4>
