added a speed mode: auto, gas depends on direction

--- a/front/templates/help.html
+++ b/front/templates/help.html
@@ -40,10 +40,16 @@
             Your car will drive at a constant speed.
         </p>
 
-        <h4>Auto</h4>
+        <h4>Confidence 💡</h4>
         <p>
             This mode will adjust the speed depending on the confidence of the car on its prediction. The more confident a prediction is, the faster it will go.
             If the model is not confident at all (the prediction has a low score), then, the car will be slow.
+        </p>
+
+        <h4>Auto 💡</h4>
+        <p>
+            This mode will adjust the speed depending on the direction of the car. If the car turns a wide angle, the speed will be reduced. If the car turns a small angle, the speed will be greater.
+            If the car goes straight, the speed will be at its maximum allowed.
         </p>
 
     </div>
