--- a/front/templates/index.html
+++ b/front/templates/index.html
@@ -33,12 +33,13 @@
             <label>Speed Mode</label><br/>
             <div class="btn-group mr-2" role="group" aria-label="First group">
 	            <button type="submit" class="btn btn-primary" data-speed-mode="constant">Constant ➡️️</button>
-	            <button type="submit" class="btn btn-outline-primary" data-speed-mode="auto">Auto 💡</button>
+	            <button type="submit" class="btn btn-outline-primary" data-speed-mode="confidence">Confidence 💡</button>
+              <button type="submit" class="btn btn-outline-primary" data-speed-mode="auto">Auto 💡</button>
 	        	</div>
           </div>
         </div>
         <div class="form-group" id="speed-limit">
-          <label for="inputAddress2" id="maxSpeed">Max speed limit: 50%</label><br/>
+          <label id="maxSpeed">Max speed limit: 50%</label><br/>
           <input type="range" id="maxSpeedSlider" oninput="maxSpeedUdate();">
         </div>
         <button id="starter" class="btn btn-success btn-lg btn-block" disabled>Start</button>
