training mode is enabled on commands tab (#52)
* training mode and started = True by default on commands tab

* refactored `main.js`

* corrected small typo

--- a/front/templates/layout.html
+++ b/front/templates/layout.html
@@ -14,7 +14,7 @@
   <body id="kinput">
 
     <div class="d-flex flex-column flex-md-row align-items-center p-3 px-md-4 mb-3 bg-white border-bottom box-shadow">
-      <h5 class="my-0 mr-md-auto font-weight-normal">IronCar Dashboard 🏎️</h5>
+      <h5 class="my-0 mr-md-auto font-weight-normal">Ironcar Dashboard 🏎️</h5>
       <nav class="my-2 my-md-0 mr-md-3">
         <a class="p-2 text-dark" href="{{ url_for('main') }}">Main</a>
         <a class="p-2 text-dark" href="{{ url_for('commands') }}">Commands</a>
