replaced inputs by sliders for commands (steering and gas)

--- a/front/templates/commands.html
+++ b/front/templates/commands.html
@@ -7,6 +7,7 @@
       <h5>Pins</h5>
       <p>You use the <code>direction_pin</code> and <code>gas_pin</code> to set the pin number on the Pi Hat.</p>
     </div>
+
     <div class="col-lg-8 mb-3">
       <div class="input-group mb-3">
         <div class="input-group-prepend">
@@ -14,6 +15,7 @@
         </div>
         <input type="text" class="form-control" value="{{commands.dir_pin}}">
       </div>
+
       <div class="input-group mb-3">
         <div class="input-group-prepend">
           <span class="input-group-text">Gas Pin</span>
@@ -29,29 +31,9 @@
       <p><code>left</code>, <code>straight</code> and <code>right</code> parameters are used to send the direction order. You need to tune those values so that the Raspi sends the right PWM commands to the RC Car.</p>
       <p>The <code>invert_dir</code> parameters defines the same commands but for reverse.</p>
     </div>
+
     <div class="col-lg-8 mb-3">
-        <div id="slider-handles"></div>
-        <div class="input-group mb-3">
-          <div class="input-group-prepend">
-            <span class="input-group-text">Left</span>
-          </div>
-          <input type="text" class="form-control" data-command="left" value="{{commands.left}}">
-        </div>
-        <div class="input-group mb-3">
-          <div class="input-group-prepend">
-            <span class="input-group-text">Straight</span>
-          </div>
-          <input type="text" class="form-control" data-command="straight" value="{{commands.straight}}">
-        </div>
-        <div class="input-group mb-3">
-          <div class="input-group-prepend">
-            <span class="input-group-text">Right</span>
-          </div>
-          <input type="text" class="form-control" data-command="right" value="{{commands.right}}">
-        </div>
-        <div class="input-group mb-3">
-          <button type="submit" class="btn btn-outline-primary" data-command-reversed="invert_dir">Invert Direction</button>
-        </div>
+        <div id="sliderDir"></div>
     </div>
   </div>
 
@@ -61,32 +43,9 @@
       <p><code>stop</code>, <code>neutral</code> and <code>drive</code> are used to accelerate the car. You need to tune these parameters.</p>
       <p><code>drive_max</code> is the maximum amount of gas. Be careful, on some cars, huge values can lead to a very fast (and uncontrollable) car!</p>
     </div>
+
     <div class="col-lg-8 mb-3">
-        <div id="slider-handles"></div>
-        <div class="input-group mb-3">
-          <div class="input-group-prepend">
-            <span class="input-group-text">Stop</span>
-          </div>
-          <input type="text" class="form-control" data-command="stop" value="{{commands.stop}}">
-        </div>
-        <div class="input-group mb-3">
-          <div class="input-group-prepend">
-            <span class="input-group-text">Neutral</span>
-          </div>
-          <input type="text" class="form-control" data-command="neutral" value="{{commands.neutral}}">
-        </div>
-        <div class="input-group mb-3">
-          <div class="input-group-prepend">
-            <span class="input-group-text">Drive</span>
-          </div>
-          <input type="text" class="form-control" data-command="drive" value="{{commands.drive}}">
-        </div>
-        <div class="input-group mb-3">
-          <div class="input-group-prepend">
-            <span class="input-group-text">Drive Max</span>
-          </div>
-          <input type="text" class="form-control" data-command="drive_max" value="{{commands.drive_max}}">
-        </div>
+      <div id="sliderGas"></div>
     </div>
   </div>
 </div>
