--- a/front/templates/layout.html
+++ b/front/templates/layout.html
@@ -8,6 +8,7 @@
     <!-- Bootstrap core CSS -->
     <link href="{{ url_for('static', filename='css/bootstrap.min.css') }}" rel="stylesheet">
     <link href="{{ url_for('static', filename='css/open-iconic-bootstrap.min.css') }}" rel="stylesheet">
+    <link href="{{ url_for('static', filename='css/nouislider.min.css') }}" rel="stylesheet" >
     <link href="{{ url_for('static', filename='css/styles.css') }}" rel="stylesheet" >
   </head>
 
@@ -34,6 +35,7 @@
     <script src="{{ url_for('static', filename='js/socket.io.min.js') }}"></script>
     <script src="{{ url_for('static', filename='js/bootstrap.min.js') }}"></script>
     <script src="{{ url_for('static', filename='js/d3.v4.min.js') }}"></script>
+    <script src="{{ url_for('static', filename='js/nouislider.min.js') }}"></script>
     <script src="{{ url_for('static', filename='js/main.js') }}"></script>
 
   </body>
