readded invert dir button

--- a/front/templates/commands.html
+++ b/front/templates/commands.html
@@ -33,7 +33,10 @@
     </div>
 
     <div class="col-lg-8 mb-3">
-        <div id="sliderDir"></div>
+        <div id="sliderDir"></div></br>
+        <div class="input-group mb-3">
+            <button type="submit" class="btn btn-outline-primary" data-command-reversed="invert_dir">Invert Direction</button>
+        </div>
     </div>
   </div>
 
